--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ entity = { path = "entity" }
 migration = { path = "migration" } 
 
 serde = { version = "1.0.218", features = ["derive"] }
-sea-orm = { version = "1.1.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
+sea-orm = { version = "1.1.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros"] }
 
 actix-web = "4.10.2"
 chrono = "0.4.40"
@@ -20,3 +20,6 @@ sha256 = "1.6.0"
 jsonwebtoken = "9.3.1"
 actix-web-grants = "4.1.2"
 actix-cors = "0.7.1"
+
+serde_json = "1"
+actix-rt = "2"
