members en toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,10 @@
+[workspace]
+members = [
+    ".",            
+    "migration",    
+    "entity"        
+]
+
 [package]
 name = "FAGIA"
 version = "0.1.0"
